# NeuroGraph

./: .env.example  .gitignore  CHAT_IMPROVEMENTS_SUMMARY.md  FOLDER_STRUCTURE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_FRONTEND_COMPLETE.md  README.md  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  skills-lock.json
backend/: .env.example  .gitignore  Dockerfile  README.md  check_neo4j.py  docker-compose.yml  mcp_config.example.json  pyproject.toml  seed_complex_graph_api.py  seed_graph_entities.py  seed_rich_domain_graph.py  seed_rich_graph_memory.py  test_db.py  test_graph.py
backend/cmd/: README.md  __init__.py  db_status.py  seed_complex_graph.py  sync_neo4j.py
backend/migrations/postgres/: 002_chat_schema.sql  003_canvas_schema.sql  init.sql
backend/scrapper/: __init__.py  main.py
backend/src/: __init__.py  main.py
backend/src/agents/: __init__.py  base.py  orchestrator.py  spawner.py
backend/src/api/: __init__.py
backend/src/api/dependencies/: __init__.py  auth.py
backend/src/api/middleware/: __init__.py  error_handler.py  logging.py
backend/src/api/routes/: __init__.py  admin.py  auth.py  chat.py  conversations.py  graph.py  integrations.py  memory.py  models.py  profile.py  workspaces.py
backend/src/api/schemas/: __init__.py
backend/src/auth/: __init__.py  jwt.py  passwords.py
backend/src/core/: __init__.py  config.py  exceptions.py  logging.py
backend/src/db/: __init__.py
backend/src/db/neo4j/: __init__.py  driver.py  operations.py
backend/src/db/postgres/: __init__.py  bootstrap.py  driver.py  operations.py
backend/src/db/redis/: __init__.py  driver.py
backend/src/integrations/: __init__.py  manager.py
backend/src/integrations/base/: __init__.py  normalizer.py  processor.py
backend/src/integrations/gmail/: __init__.py  client.py  normalizer.py
backend/src/integrations/notion/: __init__.py  client.py  normalizer.py
backend/src/integrations/slack/: __init__.py  client.py  normalizer.py
backend/src/mcp/: __init__.py  backend_routes.py  http_transport.py  neurograph_mcp.py  server.py  session.py
backend/src/mcp/tools/: __init__.py  forget.py  recall.py  remember.py  search.py
backend/src/memory/: __init__.py  decay.py  enrichment_queue.py  manager.py  scoring.py
backend/src/memory/layers/: __init__.py  base.py  global_layer.py  personal.py  tenant.py
backend/src/models/: __init__.py  gemini.py  groq.py  integrations.py  nvidia.py  unified_llm.py
backend/src/rag/: __init__.py  context_assembly.py  embeddings.py  hybrid_search.py  similarity.py
backend/src/webhooks/: README.md  __init__.py  router.py  verification.py
backend/src/webhooks/handlers/: __init__.py
backend/tests/: conftest.py  e2e_full_test.py  e2e_test.py  manual_verification.py  test_e2e_complete.py  test_gemini_full.py  test_login.py  test_quick.py  test_routes.py
backend/tests/e2e/: __init__.py  test_mcp_e2e.py  test_webhooks_e2e.py
backend/tests/integration/: __init__.py
backend/tests/unit/: __init__.py
backend/tests/unit/agents/: __init__.py  test_base.py  test_orchestrator.py  test_spawner.py
backend/tests/unit/api/: __init__.py  test_routes.py
backend/tests/unit/core/: __init__.py  test_config.py  test_exceptions.py  test_logging.py
backend/tests/unit/db/: __init__.py  test_neo4j.py  test_postgres.py  test_redis.py
backend/tests/unit/mcp/: __init__.py  test_server.py
backend/tests/unit/memory/: __init__.py  test_decay.py  test_enrichment_queue.py  test_layers.py  test_manager.py  test_scoring.py
backend/tests/unit/rag/: __init__.py  test_context_assembly.py  test_hybrid_search.py  test_similarity.py
cli/: go.mod
docs/: FRONTEND_INTEGRATION_REPORT.md  TEST_REPORT.md  VERIFICATION_REPORT.md  agents.md  api-reference.md  architecture.md  backend.md  databases.md  frontend.md  getting-started.md  graph.md  integrations.md  mcp.md  memory.md  models.md  pipeline.md  rag.md  readme.md  webhooks.md
frontend/: .env.example  (+12 more)
(+86 files in other folders)
